--- a/module_05.ipynb
+++ b/module_05.ipynb
@@ -456,7 +456,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "path = 'dataset/sentiment labelled sentences/amazon_cells_labelled.txt'\n",
+    "path = 'dataset/sentiment_labelled_sentences/amazon_cells_labelled.txt'\n",
     "df_sentiment = pd.read_csv(path, names=[ 'review', 'sentiment'], sep='\\t')\n",
     "# Poiché dei tabulatori separano le recensioni dai punteggi di sentiment corrispondenti nel file originale, è necessario specificare \\t come separatore ."
    ]
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "8ff03038",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "d9d604ed",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,6 @@
     }
    ],
    "source": [
-    "# Validazione\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "classifier = LogisticRegression()\n",
     "classifier.fit(X_train, sentiment_train)"
@@ -1012,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "c88ae71b",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "be94e180",
    "metadata": {},
    "outputs": [
