--- a/module_06.ipynb
+++ b/module_06.ipynb
@@ -344,21 +344,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "89fe6502",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import json\n",
-    "# import pandas\n",
-    "\n",
-    "# path = './module_06/emp.json'\n",
-    "# data = json.load(path)\n",
-    "# print(data) "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 52,
    "id": "47749520",
    "metadata": {},
@@ -387,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "id": "d9009d24",
    "metadata": {},
    "outputs": [
@@ -453,33 +438,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "7db4a72c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'distutils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[55]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# link: https://data.nasdaq.com/institutional-investors\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# link: https://stooq.com/\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas_datareader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpdr\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mdir\u001b[39m(pdr))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gabriele.greco\\OneDrive - AGM Solutions\\Documenti\\GitHub\\data-handling\\.venv\\Lib\\site-packages\\pandas_datareader\\__init__.py:5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_version\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_versions\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m      6\u001b[39m     DataReader,\n\u001b[32m      7\u001b[39m     Options,\n\u001b[32m      8\u001b[39m     get_components_yahoo,\n\u001b[32m      9\u001b[39m     get_dailysummary_iex,\n\u001b[32m     10\u001b[39m     get_data_alphavantage,\n\u001b[32m     11\u001b[39m     get_data_enigma,\n\u001b[32m     12\u001b[39m     get_data_famafrench,\n\u001b[32m     13\u001b[39m     get_data_fred,\n\u001b[32m     14\u001b[39m     get_data_moex,\n\u001b[32m     15\u001b[39m     get_data_quandl,\n\u001b[32m     16\u001b[39m     get_data_stooq,\n\u001b[32m     17\u001b[39m     get_data_tiingo,\n\u001b[32m     18\u001b[39m     get_data_yahoo,\n\u001b[32m     19\u001b[39m     get_data_yahoo_actions,\n\u001b[32m     20\u001b[39m     get_iex_book,\n\u001b[32m     21\u001b[39m     get_iex_data_tiingo,\n\u001b[32m     22\u001b[39m     get_iex_symbols,\n\u001b[32m     23\u001b[39m     get_last_iex,\n\u001b[32m     24\u001b[39m     get_markets_iex,\n\u001b[32m     25\u001b[39m     get_nasdaq_symbols,\n\u001b[32m     26\u001b[39m     get_quote_yahoo,\n\u001b[32m     27\u001b[39m     get_recent_iex,\n\u001b[32m     28\u001b[39m     get_records_iex,\n\u001b[32m     29\u001b[39m     get_summary_iex,\n\u001b[32m     30\u001b[39m     get_tops_iex,\n\u001b[32m     31\u001b[39m )\n\u001b[32m     33\u001b[39m PKG = os.path.dirname(\u001b[34m__file__\u001b[39m)\n\u001b[32m     35\u001b[39m __version__ = get_versions()[\u001b[33m\"\u001b[39m\u001b[33mversion\u001b[39m\u001b[33m\"\u001b[39m]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gabriele.greco\\OneDrive - AGM Solutions\\Documenti\\GitHub\\data-handling\\.venv\\Lib\\site-packages\\pandas_datareader\\data.py:11\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mwarnings\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutil\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_decorators\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m deprecate_kwarg\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas_datareader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mav\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mforex\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AVForexReader\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas_datareader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mav\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mquotes\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AVQuotesReader\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas_datareader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mav\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msector\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AVSectorPerformanceReader\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gabriele.greco\\OneDrive - AGM Solutions\\Documenti\\GitHub\\data-handling\\.venv\\Lib\\site-packages\\pandas_datareader\\av\\__init__.py:5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas_datareader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RemoteDataError\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas_datareader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mbase\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m _BaseReader\n\u001b[32m      8\u001b[39m AV_BASE_URL = \u001b[33m\"\u001b[39m\u001b[33mhttps://www.alphavantage.co/query\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gabriele.greco\\OneDrive - AGM Solutions\\Documenti\\GitHub\\data-handling\\.venv\\Lib\\site-packages\\pandas_datareader\\_utils.py:6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m to_datetime\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas_datareader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcompat\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m is_number\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mSymbolWarning\u001b[39;00m(\u001b[38;5;167;01mUserWarning\u001b[39;00m):\n\u001b[32m     10\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gabriele.greco\\OneDrive - AGM Solutions\\Documenti\\GitHub\\data-handling\\.venv\\Lib\\site-packages\\pandas_datareader\\compat\\__init__.py:1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdistutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mversion\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LooseVersion\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfunctools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m reduce\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StringIO\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'distutils'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# link: https://data.nasdaq.com/institutional-investors\n",
     "# link: https://stooq.com/\n",
     "\n",
     "import pandas_datareader.data as pdr\n",
     "print(dir(pdr))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25316753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_datareader.data as pdr\n",
+    "spx_index = pdr.get_data_stooq('^SPX', '2022-01-03', '2022-01-10')\n",
+    "print(spx_index)"
    ]
   },
   {
@@ -492,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "id": "02e6e522",
    "metadata": {},
    "outputs": [
@@ -520,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "id": "af5e5978",
    "metadata": {},
    "outputs": [
@@ -570,12 +550,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "8c9ea1bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  {\n",
+      "    \"Emp\": \"Jane Boorman\",\n",
+      "    \"Emp_email\": \"jane.boorman\",\n",
+      "    \"POs\": [\n",
+      "      {\n",
+      "        \"Pono\": 2621,\n",
+      "        \"Total\": 95\n",
+      "      },\n",
+      "      {\n",
+      "        \"Pono\": 2626,\n",
+      "        \"Total\": 218\n",
+      "      }\n",
+      "    ]\n",
+      "  },\n",
+      "  {\n",
+      "    \"Emp\": \"Jeff Russell\",\n",
+      "    \"Emp_email\": \"jeff.russel\",\n",
+      "    \"POs\": [\n",
+      "      {\n",
+      "        \"Pono\": 2608,\n",
+      "        \"Total\": 35\n",
+      "      },\n",
+      "      {\n",
+      "        \"Pono\": 2617,\n",
+      "        \"Total\": 35\n",
+      "      },\n",
+      "      {\n",
+      "        \"Pono\": 2620,\n",
+      "        \"Total\": 139\n",
+      "      }\n",
+      "    ]\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Esercizio 3: conversion Json"
+    "# Esercizio 3: convertire questo dataframe nel documento json originale, modificando il groupby\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = [{\"Emp\": \"Jeff Russell\",\n",
+    "         \"Emp_email\": \"jeff.russel\",\n",
+    "        \"POs\": [{\"Pono\": 2608, \"Total\": 35},\n",
+    "                {\"Pono\": 2617, \"Total\": 35},\n",
+    "                {\"Pono\": 2620, \"Total\": 139}]\n",
+    "        },\n",
+    "        {\n",
+    "        \"Emp\": \"Jane Boorman\",\n",
+    "        \"Emp_email\": \"jane.boorman\",\n",
+    "        \"POs\": [{\"Pono\": 2621, \"Total\": 95},\n",
+    "                {\"Pono\": 2626, \"Total\": 218}  ]\n",
+    "        }]\n",
+    "\n",
+    "df = pd.json_normalize(data, \"POs\", [\"Emp\", \"Emp_email\"]).set_index([\"Emp\", \"Emp_email\", \"Pono\"])\n",
+    "df = df.reset_index()\n",
+    "json_doc = (\n",
+    "    df.groupby(['Emp', 'Emp_email'], as_index=True)\n",
+    "    .apply(lambda x: x[['Pono', 'Total']].to_dict('records'), include_groups=False)\n",
+    "    .reset_index()\n",
+    "    .rename(columns={0: 'POs'})\n",
+    "    .to_json(orient='records')\n",
+    ")\n",
+    "\n",
+    "print(json.dumps(json.loads(json_doc), indent=2))"
    ]
   }
  ],
